--- a/style.css
+++ b/style.css
@@ -15,4 +15,11 @@ h1{
   top: 40%;
   text-align: center;
   width: 100%;
+  word-wrap: wrap;
+}
+
+@media(max-width: 992px){
+  h1{
+    font-size: 32px;
+  }
 }
