--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -503,6 +503,10 @@ textarea.form-control {
 	}
 }
 
+#portfolio{
+	
+}
+
 .hello,
 .who-creates {
 	font-family: 'Montserrat', "Times New Roman", Times, serif;
