--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -645,6 +645,16 @@ textarea.form-control {
 	display: block;
 	width: 100%;
 	height: auto;
+	opacity: 0;
+}
+
+.portfolio-items-container .portfolio-item .img {
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	right: 0;
 }
 
 .portfolio-items-container .portfolio-item {
