new projects and photos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -559,12 +559,13 @@ textarea.form-control {
 
 .side-image {
 	position: absolute;
-	background: url(../images/about.jpg) scroll center no-repeat;
+	background: url(./../../img/headshot2.png) scroll center no-repeat;
 	-webkit-background-size: cover;
 	   -moz-background-size: cover;
 		 -o-background-size: cover;
 			background-size: cover;
 	height: 100%;
+	filter: grayscale(100%)
 }
 
 .side-image-text {
@@ -655,7 +656,7 @@ textarea.form-control {
 
 .portfolio-items-container .portfolio-item .img {
 	background-size: cover;
-	width: 100%;
+	width: 101%;
 	height: 100%;
 	position: absolute;
 	top: 0;
@@ -913,20 +914,22 @@ button.mfp-close {
 .social-links a {
 	width: 36px;
 	height: 36px;
-	display: block;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	line-height: 35px;
 	text-align: center;
-	border: 1px solid rgba(255, 255, 255, .1);
+	border: 1px solid rgba(0, 0, 0, 0.1);
 	-webkit-border-radius: 50%;
 	   -moz-border-radius: 50%;
 			border-radius: 50%;
 	font-size: 14px;
-	color: rgba(255, 255, 255, .2);
+	color: rgba(0, 0, 0, 0.2);
 }
 
 .social-links a:hover {
-	border: 1px solid rgba(255, 255, 255, .5);
-	color: rgba(255, 255, 255, .5);
+	border: 1px solid #5EE2D6;
+	color: #5EE2D6;
 }
 
 /* ---------------------------------------------- /*
@@ -1221,4 +1224,15 @@ border-right: 1px solid #f1f1f1;
 line-height: 40px;
 text-align: center;
 font-size: 14px;
+}
+
+.sticky{
+	position: fixed;
+	top:0;
+}
+
+#home{
+	position: absolute;
+	width: 100%;
+	top: 0;
 }
