--- a/css/animated-headline.css
+++ b/css/animated-headline.css
@@ -20,7 +20,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 a {
