--- a/styles/main.css
+++ b/styles/main.css
@@ -660,7 +660,7 @@ aside.clients img {
 }
 section#contact {
   background-color: #222222;
-  background-image: url('https://c1.staticflickr.com/4/3242/3136996224_2daa077a9f_b.jpg');
+  /* background-image: url('https://c1.staticflickr.com/4/3242/3136996224_2daa077a9f_b.jpg'); */
   background-position: top;
   background-size: cover;
   background-attachment: fixed;
